Fixed marketplace card align. Fixed search maketplace cards

--- a/src/containers/account/marketplace/MarketPLace.scss
+++ b/src/containers/account/marketplace/MarketPLace.scss
@@ -35,6 +35,7 @@
 }
 
 .marketplace-item {
+	min-height: 325px;
 	position: relative;
 	z-index: 0;
 	padding: 0 !important;
